# ds-test-prospect-mdl

./: .gitignore  README.md  pyproject.toml
config/: dataprep.yaml
models/logistic_all_features_20251102-184953/: model.joblib
models/xgboost_all_features_20251102-184949/: model.joblib
src/dataprep/: __init__.py  features.py  ingest.py  transform.py
src/domain/: __init__.py  models.py
src/experiments/: __init__.py  compute_metrics.py  split_train_holdout.py  train_all_features.py
src/models/: __init__.py  base.py  logistic.py  xgboost.py
src/notebooks/: data_norm_vald.ipynb  fields_exploration.ipynb  plot_utils.py  target_analysis.ipynb
src/pipelines/: __init__.py  data_preparation.py  feature_engineering.py
