[project]
name = "ds-test-prospect-mdl"
version = "0.1.0"
description = "Conversion modeling pipeline for HubSpot prospect scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "mlflow>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "notebook>=7.0",        
    "ipykernel>=6.0",        
    "seaborn (>=0.13.2,<0.14.0)",        
    "xgboost (>=3.1.1,<4.0.0)"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false